--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,204 @@
 
 config.py
 __pycache__/config.cpython-39.pyc
+venv/lib/python3.9/site-packages/__pycache__/six.cpython-39.pyc
+venv/lib/python3.9/site-packages/certifi-2020.12.5.dist-info/INSTALLER
+venv/lib/python3.9/site-packages/certifi-2020.12.5.dist-info/LICENSE
+venv/lib/python3.9/site-packages/certifi-2020.12.5.dist-info/METADATA
+venv/lib/python3.9/site-packages/certifi-2020.12.5.dist-info/RECORD
+venv/lib/python3.9/site-packages/certifi-2020.12.5.dist-info/top_level.txt
+venv/lib/python3.9/site-packages/certifi-2020.12.5.dist-info/WHEEL
+venv/lib/python3.9/site-packages/certifi/__init__.py
+venv/lib/python3.9/site-packages/certifi/__main__.py
+venv/lib/python3.9/site-packages/certifi/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/certifi/__pycache__/__main__.cpython-39.pyc
+venv/lib/python3.9/site-packages/certifi/__pycache__/core.cpython-39.pyc
+venv/lib/python3.9/site-packages/certifi/cacert.pem
+venv/lib/python3.9/site-packages/certifi/core.py
+venv/lib/python3.9/site-packages/idna-2.10.dist-info/INSTALLER
+venv/lib/python3.9/site-packages/idna-2.10.dist-info/LICENSE.rst
+venv/lib/python3.9/site-packages/idna-2.10.dist-info/METADATA
+venv/lib/python3.9/site-packages/idna-2.10.dist-info/RECORD
+venv/lib/python3.9/site-packages/idna-2.10.dist-info/top_level.txt
+venv/lib/python3.9/site-packages/idna-2.10.dist-info/WHEEL
+venv/lib/python3.9/site-packages/idna-3.1.dist-info/INSTALLER
+venv/lib/python3.9/site-packages/idna-3.1.dist-info/LICENSE.md
+venv/lib/python3.9/site-packages/idna-3.1.dist-info/METADATA
+venv/lib/python3.9/site-packages/idna-3.1.dist-info/RECORD
+venv/lib/python3.9/site-packages/idna-3.1.dist-info/top_level.txt
+venv/lib/python3.9/site-packages/idna-3.1.dist-info/WHEEL
+venv/lib/python3.9/site-packages/idna/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/codec.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/compat.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/core.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/idnadata.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/intranges.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/package_data.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/uts46data.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/codec.py
+venv/lib/python3.9/site-packages/idna/compat.py
+venv/lib/python3.9/site-packages/idna/core.py
+venv/lib/python3.9/site-packages/idna/idnadata.py
+venv/lib/python3.9/site-packages/idna/package_data.py
+venv/lib/python3.9/site-packages/idna/uts46data.py
+venv/lib/python3.9/site-packages/requests-2.25.1.dist-info/INSTALLER
+venv/lib/python3.9/site-packages/requests-2.25.1.dist-info/LICENSE
+venv/lib/python3.9/site-packages/requests-2.25.1.dist-info/METADATA
+venv/lib/python3.9/site-packages/requests-2.25.1.dist-info/RECORD
+venv/lib/python3.9/site-packages/requests-2.25.1.dist-info/top_level.txt
+venv/lib/python3.9/site-packages/requests-2.25.1.dist-info/WHEEL
+venv/lib/python3.9/site-packages/requests/__init__.py
+venv/lib/python3.9/site-packages/requests/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/__version__.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/_internal_utils.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/adapters.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/api.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/auth.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/certs.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/compat.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/cookies.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/exceptions.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/help.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/hooks.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/models.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/packages.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/sessions.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/status_codes.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/structures.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__pycache__/utils.cpython-39.pyc
+venv/lib/python3.9/site-packages/requests/__version__.py
+venv/lib/python3.9/site-packages/requests/_internal_utils.py
+venv/lib/python3.9/site-packages/requests/adapters.py
+venv/lib/python3.9/site-packages/requests/api.py
+venv/lib/python3.9/site-packages/requests/auth.py
+venv/lib/python3.9/site-packages/requests/certs.py
+venv/lib/python3.9/site-packages/requests/compat.py
+venv/lib/python3.9/site-packages/requests/cookies.py
+venv/lib/python3.9/site-packages/requests/exceptions.py
+venv/lib/python3.9/site-packages/requests/help.py
+venv/lib/python3.9/site-packages/requests/hooks.py
+venv/lib/python3.9/site-packages/requests/models.py
+venv/lib/python3.9/site-packages/requests/packages.py
+venv/lib/python3.9/site-packages/requests/sessions.py
+venv/lib/python3.9/site-packages/requests/status_codes.py
+venv/lib/python3.9/site-packages/requests/structures.py
+venv/lib/python3.9/site-packages/requests/utils.py
+venv/lib/python3.9/site-packages/six-1.15.0.dist-info/INSTALLER
+venv/lib/python3.9/site-packages/six-1.15.0.dist-info/LICENSE
+venv/lib/python3.9/site-packages/six-1.15.0.dist-info/METADATA
+venv/lib/python3.9/site-packages/six-1.15.0.dist-info/RECORD
+venv/lib/python3.9/site-packages/six-1.15.0.dist-info/top_level.txt
+venv/lib/python3.9/site-packages/six-1.15.0.dist-info/WHEEL
+venv/lib/python3.9/site-packages/six.py
+venv/lib/python3.9/site-packages/spotipy-2.16.1.dist-info/INSTALLER
+venv/lib/python3.9/site-packages/spotipy-2.16.1.dist-info/LICENSE.md
+venv/lib/python3.9/site-packages/spotipy-2.16.1.dist-info/METADATA
+venv/lib/python3.9/site-packages/spotipy-2.16.1.dist-info/RECORD
+venv/lib/python3.9/site-packages/spotipy-2.16.1.dist-info/REQUESTED
+venv/lib/python3.9/site-packages/spotipy-2.16.1.dist-info/top_level.txt
+venv/lib/python3.9/site-packages/spotipy-2.16.1.dist-info/WHEEL
+venv/lib/python3.9/site-packages/spotipy/__init__.py
+venv/lib/python3.9/site-packages/spotipy/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/spotipy/__pycache__/client.cpython-39.pyc
+venv/lib/python3.9/site-packages/spotipy/__pycache__/exceptions.cpython-39.pyc
+venv/lib/python3.9/site-packages/spotipy/__pycache__/oauth2.cpython-39.pyc
+venv/lib/python3.9/site-packages/spotipy/__pycache__/util.cpython-39.pyc
+venv/lib/python3.9/site-packages/spotipy/client.py
+venv/lib/python3.9/site-packages/spotipy/exceptions.py
+venv/lib/python3.9/site-packages/spotipy/oauth2.py
+venv/lib/python3.9/site-packages/spotipy/util.py
+venv/lib/python3.9/site-packages/urllib3-1.26.3.dist-info/INSTALLER
+venv/lib/python3.9/site-packages/urllib3-1.26.3.dist-info/LICENSE.txt
+venv/lib/python3.9/site-packages/urllib3-1.26.3.dist-info/METADATA
+venv/lib/python3.9/site-packages/urllib3-1.26.3.dist-info/RECORD
+venv/lib/python3.9/site-packages/urllib3-1.26.3.dist-info/top_level.txt
+venv/lib/python3.9/site-packages/urllib3-1.26.3.dist-info/WHEEL
+venv/lib/python3.9/site-packages/urllib3/__init__.py
+venv/lib/python3.9/site-packages/urllib3/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/_collections.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/_version.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/connection.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/connectionpool.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/exceptions.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/fields.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/filepost.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/poolmanager.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/request.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/__pycache__/response.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/_collections.py
+venv/lib/python3.9/site-packages/urllib3/_version.py
+venv/lib/python3.9/site-packages/urllib3/connection.py
+venv/lib/python3.9/site-packages/urllib3/connectionpool.py
+venv/lib/python3.9/site-packages/urllib3/contrib/__init__.py
+venv/lib/python3.9/site-packages/urllib3/contrib/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/__pycache__/_appengine_environ.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/__pycache__/appengine.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/__pycache__/ntlmpool.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/__pycache__/pyopenssl.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/__pycache__/securetransport.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/__pycache__/socks.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/_appengine_environ.py
+venv/lib/python3.9/site-packages/urllib3/contrib/_securetransport/__init__.py
+venv/lib/python3.9/site-packages/urllib3/contrib/_securetransport/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/_securetransport/__pycache__/bindings.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/_securetransport/__pycache__/low_level.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/contrib/_securetransport/bindings.py
+venv/lib/python3.9/site-packages/urllib3/contrib/_securetransport/low_level.py
+venv/lib/python3.9/site-packages/urllib3/contrib/appengine.py
+venv/lib/python3.9/site-packages/urllib3/contrib/ntlmpool.py
+venv/lib/python3.9/site-packages/urllib3/contrib/pyopenssl.py
+venv/lib/python3.9/site-packages/urllib3/contrib/securetransport.py
+venv/lib/python3.9/site-packages/urllib3/contrib/socks.py
+venv/lib/python3.9/site-packages/urllib3/exceptions.py
+venv/lib/python3.9/site-packages/urllib3/fields.py
+venv/lib/python3.9/site-packages/urllib3/filepost.py
+venv/lib/python3.9/site-packages/urllib3/packages/__init__.py
+venv/lib/python3.9/site-packages/urllib3/packages/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/packages/__pycache__/six.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/packages/backports/__init__.py
+venv/lib/python3.9/site-packages/urllib3/packages/backports/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/packages/backports/__pycache__/makefile.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/packages/backports/makefile.py
+venv/lib/python3.9/site-packages/urllib3/packages/six.py
+venv/lib/python3.9/site-packages/urllib3/packages/ssl_match_hostname/__init__.py
+venv/lib/python3.9/site-packages/urllib3/packages/ssl_match_hostname/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/packages/ssl_match_hostname/__pycache__/_implementation.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/packages/ssl_match_hostname/_implementation.py
+venv/lib/python3.9/site-packages/urllib3/poolmanager.py
+venv/lib/python3.9/site-packages/urllib3/request.py
+venv/lib/python3.9/site-packages/urllib3/response.py
+venv/lib/python3.9/site-packages/urllib3/util/__init__.py
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/__init__.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/connection.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/proxy.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/queue.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/request.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/response.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/retry.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/ssl_.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/ssltransport.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/timeout.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/url.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/__pycache__/wait.cpython-39.pyc
+venv/lib/python3.9/site-packages/urllib3/util/connection.py
+venv/lib/python3.9/site-packages/urllib3/util/proxy.py
+venv/lib/python3.9/site-packages/urllib3/util/queue.py
+venv/lib/python3.9/site-packages/urllib3/util/request.py
+venv/lib/python3.9/site-packages/urllib3/util/response.py
+venv/lib/python3.9/site-packages/urllib3/util/retry.py
+venv/lib/python3.9/site-packages/urllib3/util/ssl_.py
+venv/lib/python3.9/site-packages/urllib3/util/ssltransport.py
+venv/lib/python3.9/site-packages/urllib3/util/timeout.py
+venv/lib/python3.9/site-packages/urllib3/util/url.py
+venv/lib/python3.9/site-packages/urllib3/util/wait.py
+__pycache__/config.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/idnadata.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/intranges.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/package_data.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/__pycache__/uts46data.cpython-39.pyc
+venv/lib/python3.9/site-packages/idna/codec.py
+venv/lib/python3.9/site-packages/idna/compat.py
+venv/lib/python3.9/site-packages/idna/core.py
+venv/lib/python3.9/site-packages/idna/idnadata.py
+venv/lib/python3.9/site-packages/idna/package_data.py
+venv/lib/python3.9/site-packages/idna/uts46data.py
